--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -1,53 +1,55 @@
-/* Contenedor del encabezado */
-.header-container {
+.header {
+    background-color: #00796b;
+    color: white;
+    padding: 10px;
     display: flex;
     align-items: center;
-    background-color: #00bcd4; /* Azul claro */
-    padding: 15px;
-    color: white;
-    margin-bottom: 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-/* Estilo para el logo */
-.logo {
-    height: 50px;
+.header img {
+    width: 40px;
     margin-right: 10px;
 }
 
-/* Estilo del título del encabezado */
-.header {
-    font-size: 2rem;
+.header h1 {
     margin: 0;
+    font-size: 24px;
 }
 
-/* Estilo de la tabla */
-.custom-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 0;
+.container {
+    margin-top: 20px;
 }
 
-/* Estilo para las filas del encabezado */
-.custom-thead th {
-    background-color: #f8f9fa; /* Fondo claro para el encabezado */
-    color: #333; /* Color del texto */
-    padding: 10px;
-    border-bottom: 2px solid #ddd;
+.table {
+
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+}
+
+.table thead {
+    background-color: #00796b;
+    color: white;
+}
+
+.table tbody tr:nth-child(odd) {
+    background-color: #f0f0f0;
+}
+
+.table tbody tr:hover {
+    background-color: #e0e0e0;
+}
+
+.table td, .table th {
+    padding: 12px;
     text-align: left;
 }
 
-/* Estilo para las filas del cuerpo */
-.custom-table tbody tr {
-    border-bottom: 1px solid #ddd;
+.average-text {
+    font-size: 16px;
+    color: #00796b;
+    font-weight: bold;
+    margin-top: 15px;
 }
 
-.custom-table tbody tr:hover {
-    background-color: #f1f1f1; /* Color de fondo al pasar el mouse */
-}
-
-/* Estilo específico para las celdas */
-.custom-table td {
-    padding: 10px;
-    text-align: left;
-    color: #333;
-}
